src/global/project/snapshots/pixi__global__project__parsed_manifest__tests__invalid_key.snap
---
source: src/global/project/parsed_manifest.rs
expression: "examples.into_iter().map(|example|\n                ParsedManifest::from_toml_str(example).unwrap_err().to_string()).collect::<Vec<_>>().join(\"\\n\")"
---
TOML parse error at line 1, column 2
  |
1 | [invalid]
  |  ^^^^^^^
unknown field `invalid`, expected `envs`

TOML parse error at line 1, column 15
  |
1 | [envs.ipython.invalid]
  |               ^^^^^^^
unknown field `invalid`, expected `dependencies` or `exposed`

TOML parse error at line 1, column 7
  |
1 | [envs.INVALID.dependencies]
  |       ^^^^^^^
Failed to parse environment name 'INVALID', please use only lowercase letters, numbers and dashes
